language/move-lang/tests/move_check/locals/assign_partial_resource.exp
error: 

   ┌── tests/move_check/locals/assign_partial_resource.move:6:21 ───
   │
 6 │         if (cond) { r = R{}; };
   │                     ^ Unused assignment or binding for local 'r'. Consider removing or replacing it with '_'
   │

error: 

   ┌── tests/move_check/locals/assign_partial_resource.move:6:21 ───
   │
 6 │         if (cond) { r = R{}; };
   │                     - The local might contain a resource value due to this assignment. The resource must be used before you assign to this local again
 7 │         r = R{};
   │         ^ Invalid assignment to local 'r'
   │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:13:29 ───
    │
 13 │         if (cond) {} else { r = R{}; };
    │                             ^ Unused assignment or binding for local 'r'. Consider removing or replacing it with '_'
    │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:13:29 ───
    │
 13 │         if (cond) {} else { r = R{}; };
    │                             - The local might contain a resource value due to this assignment. The resource must be used before you assign to this local again
 14 │         r = R{};
    │         ^ Invalid assignment to local 'r'
    │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:20:24 ───
    │
 20 │         while (cond) { r = R{} };
    │                        ^ Unused assignment or binding for local 'r'. Consider removing or replacing it with '_'
    │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:20:24 ───
    │
 20 │         while (cond) { r = R{} };
    │                        - The local might contain a resource value due to this assignment. The resource must be used before you assign to this local again
    │                        ^ Invalid assignment to local 'r'
    │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:20:24 ───
    │
 20 │         while (cond) { r = R{} };
    │                        - The local might contain a resource value due to this assignment. The resource must be used before you assign to this local again
 21 │         r = R{};
    │         ^ Invalid assignment to local 'r'
    │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:27:16 ───
    │
 27 │         loop { r = R{} }
    │                ^ Unused assignment or binding for local 'r'. Consider removing or replacing it with '_'
    │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:27:16 ───
    │
 27 │         loop { r = R{} }
    │                - The local might contain a resource value due to this assignment. The resource must be used before you assign to this local again
    │                ^ Invalid assignment to local 'r'
    │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:30:27 ───
    │
 30 │     fun t5<T>(cond: bool, x: T, y: T): (T, T) {
    │                           - The local might contain a resource value due to this assignment. The resource must be used before you assign to this local again
 31 │         if (cond) { x = y };
    │                     ^ Invalid assignment to local 'x'
    │

error: 

    ┌── tests/move_check/locals/assign_partial_resource.move:31:25 ───
    │
 31 │         if (cond) { x = y };
    │                         - The local might not have a value due to this position. The local must be assigned a value before being used
 32 │         (x, y)
    │             ^ Invalid usage of local 'y'
    │

